fix image table on mobile

--- a/src/assets/style/modules/download.scss
+++ b/src/assets/style/modules/download.scss
@@ -148,6 +148,10 @@
 		max-height: 0;
 		overflow: hidden;
 		@include transition(max-height 0.3s ease-out);
+		
+		@include res2 {
+			font-size: $small2;
+		}
 		&.show {
 			max-height: 100em;
 			@include transition(max-height 0.3s ease-in);
